--- a/2-Data Analysis/4-Manipulación de datos/3-Programacion_funcional/Programacion_funcional.ipynb
+++ b/2-Data Analysis/4-Manipulación de datos/3-Programacion_funcional/Programacion_funcional.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,28 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "15"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista = [1,2,3]\n",
     "suma_fun(lista)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +117,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +178,7 @@
        "12"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +217,7 @@
        "<function __main__.<lambda>(x, y)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +237,7 @@
        "12"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,9 +347,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Aquí va vuestro código"
+    "# Aquí va vuestro código\n",
+    "Multiplica = lambda a,b,c: a*b*b\n",
+    "\n",
+    "Multiplica(2,3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "raiz_cuadrada = lambda x: math.sqrt(x)\n",
+    "\n",
+    "raiz_cuadrada(9)"
    ]
   },
   {
@@ -362,16 +399,16 @@
     "Se trata de una función *built-in* que tiene dos argumentos. Unos es una función, y el otro un iterable, que puede ser una lista, tupla, string... **Lo que hace es aplicarle la función a cada uno de los argumentos del iterable**. Mapea cada valor del iterable, le aplica una operación, y crea un nuevo iterable al que le ha aplicado dicha operación.\n",
     "\n",
     "Su sintaxis es:\n",
-    "```Python\n",
-    "map(funcion, iterable)\n",
-    "```\n",
     "\n",
-    "Se trata de una manera de sustituir la funcionalidad de los bucles. Muy útil cuando queramos aplicar operaciones a una lista entera."
+    "### map(funcion, iterable)\n",
+    "\n",
+    "\n",
+    "### Se trata de una manera de sustituir la funcionalidad de los bucles. Muy útil cuando queramos aplicar operaciones a una lista entera."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,9 +632,109 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6050.000000000001, 7150.000000000001, 8250.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aquí va vuestro código\n",
+    "\n",
+    "salario = [5500, 6500, 7500]\n",
+    "\n",
+    "mi_funcion1 = map(lambda x: 1.10 * x if(x>0) else x, salario)\n",
+    "\n",
+    "print(list(mi_funcion1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### revisar con video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Empleados</th>\n",
+       "      <th>Salarios</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Empleados  Salarios\n",
+       "0          1      5500\n",
+       "1          2      6500\n",
+       "2          3      7500"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_calculo = pd.DataFrame({\"Empleados\": [1,2,3], \"Salarios\": salario})\n",
+    "\n",
+    "df_calculo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Aquí va vuestro código"
+    "df_calculo[salario] = df_calculo[salario].map(mi_funcion1)"
    ]
   },
   {
@@ -618,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +801,7 @@
        "[1, 3, 5, 6, 2]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -751,9 +888,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8640"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Aquí va vuestro código"
+    "# Aquí va vuestro código\n",
+    "\n",
+    "from functools import reduce\n",
+    "\n",
+    "dupla = (9,4,6,4)\n",
+    "\n",
+    "mi_funcion = lambda x,y : x*y\n",
+    "\n",
+    "reduce(mi_funcion, dupla, 10)\n",
+    "#                    x     y\n"
    ]
   },
   {
@@ -793,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -845,6 +1002,26 @@
     "filtrado = filter(mas_cinco, lista)\n",
     "\n",
     "print(list(filtrado))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, False, True]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[mas_cinco(x) for x in lista]"
    ]
   },
   {
@@ -873,11 +1050,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.3]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Aquí va vuestro código"
+    "# Aquí va vuestro código\n",
+    "mi_tupla = (True, 4.3, 5, \"Hola\")\n",
+    "\n",
+    "tipo_float = filter(lambda x: type(x) == float, mi_tupla)\n",
+    "\n",
+    "list(tipo_float)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " EN UNA SOLA LINEA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.3]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: type(x) == float, mi_tupla))"
    ]
   },
   {
@@ -893,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,14 +1124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83.3 ms ± 2.11 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "72.1 ms ± 6.94 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -935,14 +1155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "153 ns ± 4.76 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "128 ns ± 10.9 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -962,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,14 +1193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9 ms ± 242 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "2.03 ms ± 90.2 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -1003,7 +1223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "weather = pd.DataFrame({\"temperatura\": [20, 15, 34, 4, 1, 25, 21, 29, 40]})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1084,15 +1315,12 @@
        "8           40"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "weather = pd.DataFrame({\"temperatura\": [20, 15, 34, 4, 1, 25, 21, 29, 40]})\n",
     "weather"
    ]
   },
@@ -1106,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1178,7 +1406,7 @@
        "4            1  Invierno"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1507,7 @@
        "4            1  Invierno                    6"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1598,7 @@
        "4            1  Invierno                    6          INVIERNO"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1731,7 @@
        "8           40    Verano                   45            VERANO          104.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,8 +1744,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WHERE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1792,7 @@
        "      <td>25</td>\n",
        "      <td>OTRA</td>\n",
        "      <td>68.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Temp Alta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1566,7 +1801,7 @@
        "      <td>20</td>\n",
        "      <td>OTRA</td>\n",
        "      <td>59.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Temp Baja</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1575,7 +1810,7 @@
        "      <td>39</td>\n",
        "      <td>VERANO</td>\n",
        "      <td>93.2</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Temp Alta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1584,7 +1819,7 @@
        "      <td>9</td>\n",
        "      <td>INVIERNO</td>\n",
        "      <td>39.2</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Temp Baja</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1593,7 +1828,7 @@
        "      <td>6</td>\n",
        "      <td>INVIERNO</td>\n",
        "      <td>33.8</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Temp Baja</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1607,22 +1842,23 @@
        "3            4  Invierno                    9          INVIERNO   \n",
        "4            1  Invierno                    6          INVIERNO   \n",
        "\n",
-       "   temperatura_F  Negocio  \n",
-       "0           68.0     True  \n",
-       "1           59.0    False  \n",
-       "2           93.2     True  \n",
-       "3           39.2    False  \n",
-       "4           33.8    False  "
+       "   temperatura_F    Negocio  \n",
+       "0           68.0  Temp Alta  \n",
+       "1           59.0  Temp Baja  \n",
+       "2           93.2  Temp Alta  \n",
+       "3           39.2  Temp Baja  \n",
+       "4           33.8  Temp Baja  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "weather['Negocio'] = np.where(weather['temperatura']>=20, True, False)\n",
+    "#weather['Negocio'] = np.where(weather['temperatura']>=20, True, False)\n",
+    "weather['Negocio'] = np.where(weather['temperatura']>=20, \"Temp Alta\", \"Temp Baja\")\n",
     "weather.head()"
    ]
   },
@@ -1639,7 +1875,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "[3, 7, 6, 8, 10, 13, 5, 14]\n",
+      "17\n",
+      "[5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# Funciones lambda\n",
     "suma_lambda = lambda x, y: x + y\n",
@@ -1663,6 +1910,13 @@
     "filtrado = filter(lambda x: x >= 5, lista)\n",
     "print(list(filtrado))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1681,7 +1935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   },
   "vscode": {
    "interpreter": {
